# a3s

./: LICENSE  README.md  TODO.md
.githooks/: pre-commit
agent/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  agent.py  config.py  pyproject.toml  test_a2a.py
agent/config/: agent.example.yaml
agent/docs/: oauth-token-validation.md  testing-strategy.md
agent/docs/auth/: oauth-transport-security.md
agent/docs/dev/: module-interactions.md  testing-decisions.md  testing-strategy.md
agent/schemas/: agent.config.schema.json
agent/src/: a2a.py  agent.py  app.py  auth.py  config.py  loggingManager.py  main.py  mcp.py  telemetry.py  utils.py
agent/src/a2a/: __init__.py  app.py  executor.py  server.py
agent/src/agent/: __init__.py  agent.py  mcp.py  skills.py  subagents.py
agent/src/auth/: __init__.py  api_key.py  constants.py  context.py  oauth2.py  oauth_client_auth.py  oauth_metadata.py
agent/src/auth/inbound/: __init__.py  api_key.py  oauth2.py
agent/src/auth/outbound/: __init__.py  oauth_client_credentials.py  oauth_grant.py  oauth_token_exchange.py  token_expiry.py  types.py
agent/src/auth/outbound/internal/: token_helpers.py
agent/src/config/: config.py  constants.py  types.py
agent/src/config/types/: __init__.py  agent.py  auth.py  common.py  llm.py  logging.py  mcp_servers.py  outbound_auth.py  server.py  sessions.py
agent/src/mcp/: __init__.py  core.py  headers.py  oauth_client_credentials.py  toolset.py
agent/src/mcp/internal/: headers.py  oauth_client_credentials.py  types.py
agent/src/observability/: logging.py  telemetry.py
agent/src/subagents/: __init__.py  core.py  interceptors.py
agent/tests/: conftest.py  test_a2a.py  utils.py
agent/tests/common/: a2a.py  config.py  containers_utilities.py  keycloak.py  llm.py  realm.json
agent/tests/component/: conftest.py
agent/tests/component/a2a/: conftest.py  test_a2a.py
agent/tests/component/agent/mcp/: conftest.py  fixture.py  test_mcp.py
agent/tests/component/auth/: conftest.py
agent/tests/component/auth/inbound/: test_oauth2.py
agent/tests/component/common/: iam.py
agent/tests/e2e/: conftest.py  test_agent_card.py  test_no_auth.py  test_round_trip.py  utils.py
agent/tests/integration/: conftest.py  test_agent_card.py  test_api_key_auth.py  test_no_auth.py  utils.py
agent/tests/integration/agent/: test_agent_card.py  test_api_key_auth.py  test_no_auth.py
agent/tests/integration/auth/: conftest.py
agent/tests/integration/auth/inbound/: test_oauth2.py
agent/tests/integration/common/: agent.py  containers_utilities.py  keycloak.py  mcp.py  session_service_db.py  subagent.py
agent/tests/integration/inbound_auth/: conftest.py  test_agent_card.py  test_api_key_hot_paths.py  test_no_auth_hot_paths.py  test_oauth2_hot_paths.py
agent/tests/integration/logging/: test_logging_propagation.py
agent/tests/integration/mcp/: conftest.py  test_hot_paths.py  test_mcp_hot_paths.py
agent/tests/integration/sessions/: test_postgres_sessions.py  test_sessions.py
agent/tests/integration/subagents/: conftest.py  test_hot_paths.py  test_subagent_hot_paths.py
agent/tests/unit/: test_fetch_json.py
agent/tests/unit/a2a/: test_sqlalchemy_db_url.py
agent/tests/unit/auth/: test_build_client_authenticated_request.py  test_oauth2_middleware.py  test_oauth_client_auth.py  test_oauth_metadata.py  test_rfc9068_access_token_validator.py
agent/tests/unit/config/: test_common_types.py  test_compute_mcp_servers.py  test_config.py  test_config_constructor.py  test_config_from_env.py  test_config_outbound_auth_validator.py  test_config_schema_contract.py  test_load_config.py  test_normalize_mcp_servers.py  test_oauth_policies_validator.py  test_read_yaml_config.py  test_resolve_config_file.py  test_server_config.py  test_sessions_config.py  test_substitute_env_vars.py  test_validate_auth_config.py  utils.py
agent/tests/unit/logging/: test_logging_config_constructor.py  test_logging_manager.py
agent/tests/unit/mcp/: test_core.py
agent/tests/unit/observability/: test_logging.py
agent/tests/unit/subagents/: test_interceptors.py
app/: README.md  (+5 more)
(+163 files in other folders)
