[project]
name = "a3s-agent"
version = "0.1.0"
description = "a2s configurable agent server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.3.0",
    "google-adk[a2a]>=1.31.0",
    "litellm",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pyyaml>=6.0",
    "returns>=0.27.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project.scripts]
a3s-agent = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.5",
    "pytest-iam>=0.2.5",
    "testcontainers[keycloak]>=4.9.0",
]

[tool.pytest.ini_options]
addopts = "--disable-warnings -m 'not e2e'"
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests against a real LLM (manual only; opt in with `-m e2e`)",
]
