[project]
name = "a3s-agent"
version = "0.1.0"
description = "a2s configurable agent server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.3.0",
    "google-adk[a2a,extensions]>=1.31.0", # extensions provides litellm
    "a2a-sdk>=0.3.4,<0.4", # Forced by google-adk[a2a]
    "starlette>=0.49.1", # Forced by google-adk[extensions]
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "typing-extensions>=4.15.0",
    "pydantic>=2.12.5", # Forced by google-adk[extensions]
    "pyjwt>=2.13.0",
    "mcp>=1.28.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pyyaml>=6.0",
    "returns>=0.27.0",
    "opentelemetry-instrumentation-starlette>=0.59b0",
    "openinference-instrumentation-google-adk>=0.1.16",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project.scripts]
a3s-agent = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.5",
    "pytest-iam>=0.2.5",
    "testcontainers[keycloak]>=4.9.0",
    "deptry>=0.25.1"
]

[tool.pytest.ini_options]
addopts = "--disable-warnings -m 'not e2e'"
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests against a real LLM (manual only; opt in with `-m e2e`)",
]

[tool.deptry]
known_first_party = ["src"]

[tool.deptry.package_module_name_map]
pydantic = ["pydantic", "pydantic_core"] # pydantic_core ships separately but is guaranteed by pydantic;
